[tool.poetry]
name = "mcp23017cluster"
version = "0.1.0"
description = "controll multiple mcp23017 boards at the same time"
authors = ["seekingmeanings <git-j@mail.o-family.de>"]
readme = "README.md"
packages = [{"include" = "mcp23017cluster"}]

[tool.poetry.dependencies]
python = "^3.12"
smbus2 = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
